--- a/subpage/main page/styles/mainpage.css
+++ b/subpage/main page/styles/mainpage.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 /* navbar styling */
 .navbar {
     /* border: 1px solid black; */
@@ -40,6 +41,7 @@
     align-items: center;
     margin-right: 52px;
 }
+
 /* navbar styling */
 
 .healthy_eating {
@@ -67,8 +69,10 @@
     display: inline-block;
     border: none;
     margin: -170px 0 0 450px;
+    /* margin: auto; */
     font-weight: lighter;
-
+    z-index: 1;
+    /* border: 1px solid black; */
 }
 
 .mag_glass {
@@ -160,7 +164,7 @@ hr {
 }
 
 /* .activities { */
-    /* border: 1px solid #ff763f; */
+/* border: 1px solid #ff763f; */
 
 /* } */
 
@@ -254,4 +258,145 @@ hr {
     bottom: 0;
     left: 0;
 }
+
 /* footer styling */
+
+/* medium screen styling */
+
+@media all and (min-width:768px) and (max-width:1023px) {
+
+    #search {
+        width: 98%;
+        height: 40px;
+        border-radius: 30px;
+        padding: 15px 60px 20px 45px;
+        display: inline-block;
+        border: none;
+        margin: -170px 0 0 0;
+        /* margin: auto; */
+        font-weight: lighter;
+        z-index: 1;
+        /* border: 1px solid black; */
+    }
+
+    .help_content {
+        margin: auto;
+        /* border: 1px solid rgba(255, 118, 63, 1); */
+        width: 90%;
+        margin-top: 55px;
+    }
+
+    .first_box {
+        width: 90%;
+        margin: auto;
+        /* border: 1px solid rgba(255, 118, 63, 1); */
+        display: block;
+        /* justify-content: space-around; */
+        gap: 30px;
+        text-align: center;
+        align-items: center;
+    }
+
+    .first_box>div {
+        margin-bottom: 20px;
+    }
+
+    .second_box {
+        width: 90%;
+        height: 100px;
+        border: 1px solid rgba(255, 118, 63, 1);
+        text-align: center;
+        align-items: center;
+        margin: auto;
+        /* padding-top: 25px; */
+        border-radius: 5px;
+        color: #ff763f;
+        cursor: pointer;
+    }
+
+    .help_content+hr {
+        display: none;
+    }
+
+    .recent {
+        display: none;
+    }
+}
+
+/* medium screen styling */
+
+@media all and (min-width:321px) and (max-width:767px) {
+
+    .navbar {
+        border: 1px solid black;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .manual_logo {
+        width: 50%;
+    }
+
+    .request {
+        width: 50%;
+    }
+
+    #search {
+        width: 98%;
+        height: 40px;
+        border-radius: 30px;
+        padding: 15px 60px 20px 45px;
+        display: inline-block;
+        border: none;
+        margin: -170px 0 0 0;
+        /* margin: auto; */
+        font-weight: lighter;
+        z-index: 1;
+        /* border: 1px solid black; */
+    }
+
+    .help_content {
+        margin: auto;
+        /* border: 1px solid rgba(255, 118, 63, 1); */
+        width: 90%;
+        margin-top: 55px;
+    }
+
+    .first_box {
+        width: 90%;
+        margin: auto;
+        /* border: 1px solid rgba(255, 118, 63, 1); */
+        display: block;
+        /* justify-content: space-around; */
+        gap: 30px;
+        text-align: center;
+        align-items: center;
+    }
+
+    .first_box>div {
+        margin-bottom: 20px;
+    }
+
+    .second_box {
+        width: 90%;
+        height: 100px;
+        border: 1px solid rgba(255, 118, 63, 1);
+        text-align: center;
+        align-items: center;
+        margin: auto;
+        /* padding-top: 25px; */
+        border-radius: 5px;
+        color: #ff763f;
+        cursor: pointer;
+    }
+
+    .help_content+hr {
+        display: none;
+    }
+
+    .recent {
+        display: none;
+    }
+}
