--- a/subpage/sub-pages/web_version/web_subpages/web_diary/web_diary.css
+++ b/subpage/sub-pages/web_version/web_subpages/web_diary/web_diary.css
@@ -89,7 +89,7 @@
 .sub_navbar {
     margin: auto;
     /* border: 1px solid black; */
-    width: 1160px;
+    width: 100%;
     height: 55px;
     display: flex;
     justify-content: space-between;
@@ -136,7 +136,6 @@
     font-weight: 300;
     padding: 0 20px 0 40px;
     margin: 7px 0 0 0;
-
 }
 
 
@@ -218,10 +217,11 @@ div>ul>li:hover {
 
 }
 
+/* 
 .author>div {
-    /* border: 1px solid #ff763f; */
+    border: 1px solid #ff763f;
+} */
 
-}
 
 .author>div:nth-child(2) {
     width: 140px;
@@ -382,4 +382,197 @@ div>ul>li:hover {
     width: 25px;
     height: 23px;
     gap: 10px;
+}
+
+/* medium screens styling */
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+
+    .navbar {
+        width: 100%;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .manual_logo {
+        width: 50%;
+        /* border: 1px solid black; */
+    }
+
+    .manual_logo>img {
+        width: 50%;
+        height: 60%;
+    }
+
+    .request {
+        width: 50%;
+        /* border: 1px solid black; */
+
+    }
+
+    .request>div>A {
+        font-size: xx-large;
+    }
+
+    .sub_navbar {
+        width: 100%;
+        margin: auto;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .sections {
+        display: none;
+    }
+
+    .footer {
+        width: 100%;
+    }
+}
+
+/* small screens styling */
+
+@media all and (min-width: 321px) and (max-width: 767px) {
+
+    .navbar {
+        width: 100%;
+        margin: auto;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .sub_navbar {
+        width: 100%;
+        display: flex;
+    }
+
+    .path {
+        /* border: 1px solid black; */
+        width: 100%;
+    }
+
+    #input_sub_search {
+        display: none;
+    }
+
+    .manual_logo {
+        width: 50%;
+        /* border: 1px solid black; */
+    }
+
+    /* .manual_logo>img{
+        width: 50%;
+        height: 60%;
+    } */
+
+    .request {
+        width: 50%;
+        /* border: 1px solid black; */
+
+    }
+
+    .request>div>A {
+        font-size: 32;
+    }
+
+    .sub_navbar {
+        width: 100%;
+        margin: auto;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .sections {
+        display: none;
+    }
+
+    .header {
+        width: 100%;
+        /* word-wrap: break-word; */
+    }
+
+    .author {
+        width: 100%;
+        display: block;
+    }
+
+
+    .author>div>img {
+        display: none;
+    }
+
+    .author>div:nth-child(3) {
+        display: none;
+    }
+
+    .articles {
+        width: 100%;
+    }
+
+    .article_body {
+        width: 100%;
+    }
+
+    .article_body>p {
+        font-size: xx-large;
+        word-wrap: break-word;
+        /* font-weight: 200; */
+        margin: 15px 0 10px 0;
+    }
+
+
+    .article_body>ul {
+        font-size: xx-large;
+    }
+
+    .image1 {
+        width: 100%;
+        height: 88px;
+    }
+
+    .image2 {
+        width: 100%;
+        height: 237px;
+
+    }
+
+    .image3 {
+        width: 100%;
+        height: 652px;
+    }
+
+    .image4 {
+        width: 100%;
+        height: 139px;
+    }
+
+    .image5 {
+        width: 100%;
+        height: 388px;
+    }
+
+    .image6 {
+        width: 100%;
+        height: 309px;
+    }
+
+    .image7 {
+        width: 100%;
+        height: 311px;
+    }
+
+    .votes {
+        width: 100%;
+    }
+
+    .footer {
+        width: 100%;
+    }
 }
